This file documents the revision history for Perl extension Mojolicious.

2.93  2012-05-05
  - Added remove method to Mojolicious::Routes::Route.
  - Improved 32bit Perl support of Mojo::Transaction::WebSocket.
    (mikemagowan, sri)
  - Improved renderer log messages.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that prevented helper names from starting with "end". (Akron)
  - Fixed bug that prevented helper names from ending with "begin".
  - Fixed empty frame handling in Mojo::Transaction::WebSocket.
  - Fixed small rendering bug in Mojolicious::Plugin::PODRenderer.

2.92  2012-04-30
  - Added commands attribute to Mojolicious.
  - Improved documentation.
  - Improved tests.
  - Fixed attribute namespace selector bugs in Mojo::DOM::CSS.

2.91  2012-04-26
  - Added cookies method to Mojo::Message.
  - Updated HTML5 entities in Mojo::Util.
  - Improved documentation.

2.90  2012-04-25
  - Fixed small JavaScript bug in Mojolicious::Plugin::PODRenderer.

2.89  2012-04-24
  - Made logo on built-in templates smaller.
  - Improved CSS of built-in templates.
  - Improved documentation.
  - Improved tests.

2.88  2012-04-24
  - Improved documentation.
  - Improved tests.

2.87  2012-04-23
  - Improved html_escape performance and added pattern support.
  - Improved documentation.
  - Improved tests.
  - Fixed small escaping bug.

2.86  2012-04-23
  - Added support for TO_JSON method to Mojo::JSON.
  - Updated HTML5 entities in Mojo::Util.
  - Increased default heartbeat_timeout from 10 to 20 seconds in
    Mojo::Server::Hypnotoad.
  - Improved Mojo::Template exception handling.
  - Improved ojo exception handling.
  - Improved documentation.
  - Improved tests.
  - Fixed a few HTML5 unescaping bugs.

2.85  2012-04-19
  - Modernized ".perltidyrc".
  - Improved documentation. (diegok, sri)
  - Fixed bug in "user_agent.t".

2.84  2012-04-19
  - Improved documentation.
  - Improved tests.
  - Fixed flash.

2.83  2012-04-18