@@ -4,6 +4,7 @@ This file documents the revision history for Perl extension Mojolicious.
   - Added remove method to Mojolicious::Routes::Route.
   - Improved 32bit Perl support of Mojo::Transaction::WebSocket.
     (mikemagowan, sri)
+  - Improved exception handling of application and config file loaders.
   - Improved renderer log messages.
   - Improved documentation.
   - Improved tests.
